--- a/guidelinesWP/01-chap1.Rmd
+++ b/guidelinesWP/01-chap1.Rmd
@@ -1,5 +1,17 @@
 # INTRODUCTION {#intro}
 
+<!--Footnotes:
+^[Holt *et. al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper. In review]   
+
+^[Holt *et al.* Case Study Applications of LRP Estimation Methods to Pacific Salmon Stock Management Units. CSAS Working Paper. In review]
+
+^[Pestal, G., MacDonald, B, Grant, S, and Holt, C. Rapid Status Approximations from Integrated Expert Assessments Under Canada’s Wild Salmon Policy. Can. Tech. Rep. Fish. Aquat. Sci. In prep.]
+
+^[Marentette *et al.* National Guidance on Development of LRPs under Fish Stock Provisions of the Fisherie Act. CSAS Working Paper. In prep.]
+
+^[COSEWIC. DU Report for ???]
+-->
+
 ## BACKGROUND
 
 
@@ -15,7 +27,7 @@ Canada's Wild Salmon Policy, WSP, represents DFO's implementation of the Precaut
 
 Differences in adaptive traits among CUs results in diversity in CU-level responses to threats and environmental drivers. <!--KH: It is therefore expected that maintaining CU-level diversity will contribute to the establishment of portfolio effect of aggregations of CUs.--> Portfolio effects have been established <!--KH: demonstrated? --> for numerous salmon stocks, <!-- where portfolio effects are -->defined as population aggregates containing population and life-history diversity which produce temporally stable recruitment because of the complementary or independent dynamics among sub-populations [@schindlerPopulationDiversityPortfolio2010a]. <!-- KH: An alternative definition that focusses on the 'effect' would be to finish the above sentence as "... defined as a dampening of interannual variance in aggregate-level recruitment due to the complementary or independent dynamics among component sub-populations [@schindlerPopulationDiversityPortfolio2010] --> Population and life-history diversity can buffer species from environmental variability and contribute to long-term stability through differing responses to environmental changes, e.g., those anticipated under climate warming. Deterioration of portfolio effects have been observed for Pacific salmon in Canada, in part due to fishing practices that ignored underlying population structure (e.g., structure at the CU level) and associated biodiversity [@pricePortfolioSimplificationArising2021a].
 
-Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada (DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
+Under the WSP, status of individual CUs is represented by comparing status indicators to biological benchmarks delineating three zones of status, green, amber, and red. These zones represent increasing conservation concern from green to red requiring increasing management intervention. The lower benchmark, delineating the red and amber zones, is intended to be at the level to "ensure there is a substantial buffer between it and any level of abundance that could lead to a CU being considered at risk of extinction by COSEWIC", the Committee on the Status of Endangered Wildlife in Canada <!--fix refs-->(DFO 2005; Holt et al. 2009). One recommended lower benchmark on spawning abundances is the abundance resulting in recovery to S~MSY~ in one salmon generation under equilibrium conditions, S~gen~ [@holtEvaluationBenchmarksConservation2009]. Benchmarks for data-limited contexts have also been identified in recognition that the data required to estimate spawner-recruitment based benchmarks are not always available. See Section \@ref(cu-est-methods).
 
 
 Under the WSP, the assessment of Pacific salmon has focused on setting benchmarks for individual salmon CUs [@dfoCanadaPolicyConservation2005a], the revised Fisheries Act includes language <!--KH: delete 'includes language' -->indicates that a single LRP may <!--KH: can 'may' be replaced with 'is' --> be required for each "Major Fish Stock" [@dfoScienceAdvicePrecautionary2021]. <!-- KH: the above sentence is missing a transition between the two parts; consider re-wording as "While the assessment of Pacific salmon under the WSP has focused on setting benchmarks for individual salmon CUs, the revised Fisheries Act indicates that a single LRP is required for each "Major Fish Stock""--> In the context of Pacific salmon, "Major Fish Stocks" are defined as Stock Management Units (SMUs), which are groups of CUs that are managed as a unit to achieve joint status.  This provision created the need for the development of methodologies to estimate LRPs for management at the SMU level, while considering the need to maintain all CUs within an SMU above their lower benchmarks. The present work expands on previous work <!--KH: done to establish assessment methods under the WSP --> by providing guidance on establishing LRPs for management of <!--KH: replace 'for management of' to 'at the scale of' -->Pacific salmon SMUs.  Given the similar intent of LRPs defined by DFO's Precautionary Approach Framework and lower benchmarks under the WSP, lower benchmarks can be used as proxies for LRPs but applied at the scale of CUs instead of SMUs. Our challenge is to identify LRPs that integrate <!--KH: CU-level estimates of status relative to lower benchmarks across all componet CUs within an SMU.--> status represented by WSP benchmarks across component CUs to the scale of SMUs. 
@@ -80,7 +92,7 @@ The goals of this working paper were to:
 
 1. Develop candidate methods for identifying SMU-level LRPs for Pacific salmon that are consistent with the Wild Salmon Policy objective of conserving biodiversity by maintaining CUs above lower biological benchmarks.  These candidate methods include LRPs based on the status of component CUs and aggregate abundance over multiple CUs, where CU assessments can be developed using a multidimensional or single-metric approaches, as appropriate. (See Section \@ref(cu-est-methods))
 
-2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and \@ref(app:first-appendix)). More details are provided in companion paper, Holt et al. (in review).
+2. Document candidate methods for developing LRPs at the SMU-level, including data requirements and assumptions. (See Section \@ref(est-methods) and \@ref(app:first-appendix)). More details are provided in companion paper, Holt et al. (in review).^[Holt *et al.* Guidelines for Defining Limit Reference Points for Pacific Salmon Stock Management Units. CSAS Working Paper In review] 
 
 3. Document key uncertainties that affect LRP estimates for each method considered, including uncertainties arising from missing or limited CU-level data. (See Section \ref(recommendations))
 
