minor edits ch6 case study

--- a/caseStudyWP/06-chap6.Rmd
+++ b/caseStudyWP/06-chap6.Rmd
@@ -5,24 +5,22 @@
 
 LRPs described in this working paper rely on CU-level benchmarks and assessments, for which data vary in quality and quantity. Our case studies demonstrate the application of proportion-based and aggregate-abundance based LRPs to SMUs containing CUs with a range of data availability including those with stock-recruitment benchmarks, habitat-based benchmarks, and percentile-based benchmarks. In addition, we demonstrate assessments for SMUs containing CUs without abundance-based benchmarks where statuses rely on short and long-term trends over time, as demonstrated in application of multidimensional assessments within the Pacific Salmon Status Scanner to Inside Southcoast Chum - Non Fraser. 
 
-At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner. <!--BC:These sentences seem to contradict themselves. CH: I don't understant where the contradiction is-->  These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for 1 CU in 3 years<!--correct me I'm wrong on numbers here KH-->. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
+At the CU-level, we found that using a single metric, spawner abundances relative to a WSP lower benchmark (S~gen~ or percentiles) resulted in similar status assessments to using the Pacific Salmon Status Scanner.   These similarities occur because when lower benchmark estimates are available, the Salmon Scanner tool will usually default to assessing status against them, as was demonstrated for all three case studies. Exceptions occur when the lower benchmark estimates are below the absolute population thresholds (e.g., below 1500 spawners) and available spawner time-series are absolute numbers, as occurred for the Interior Fraser Coho study case for one CU in three years<!--correct me I'm wrong on numbers here KH CW: this is correct-->. In these cases, the Salmon Scanner triggered red status due to low abundances below the absolute conservation threshold even though the stock-recruitment based lower benchmark was not breached.
 
 
-In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy. <!--CH: I think the criteria for 'proxy' account for differences in size, i.e., criteria 4: small CUs can't be represented by large CUs, so I think these last 2 sentences can be omitted.  "The status assessment based on trends is also useful when the CUs lacking lower benchmark estimates are small. Representing small CUs by proxy is problematic because the small CUs tend to be more vulnerable than larger CUs even if productivity is similar (cite)."--> 
-
-For example, for Inside South Coast Chum - Non Fraser, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status. <!--CH: Luke does this sound okay?-->
+In addition, we found that using the Salmon Scanner allows for the consideration of CUs that would otherwise be considered data deficient using single metric on spawner abundances relative to benchmarks, thus allowing for a more complete assessment of the SMU status. In these cases, the Salmon Scanner is able to provide an assessment of status based on short and long-term trends when benchmarks on spawner abundances are not available, as demonstrated in the Inside South Coast Chum case study. <!--CW: added the following to emphasize the importance of assessing more CUs -->  The possibility of assessing CUs lacking abundance-based lower benchmarks is particularly important when SMUs are composed of CUs with low levels of synchrony in which data deficient CUs cannot be represented by proxy. For example, for Inside South Coast Chum - Non Fraser, we found that status relative to LRP changed as additional data-limited CUs were considered using the Salmon Scanner, which could not be assessed using single-metric on spawner abundances relative to percentile-based benchmarks. These data-limited CUs have unique biological and landscape characteristics, such that the data-rich CUs in this SMU are not appropriate indicators for their status. <!--CH: Luke does this sound okay?-->
 
 
 
 ## PROPORTION-BASED LRPS
 
 The reliability of proportion-based LRP estimates depends on the reliability of individual CU status estimates. The effect of uncertainty in CU-level benchmarks on resulting estimates of LRP status was apparent in the Interior Fraser Coho case study where two different structural assumptions in stock-recruitment model fit were considered. These two model fits resulted in different estimates of productivity and carrying capacity for individual CUs, as well as different estimates of S~gen~. These two model formulations resulted in different estimates of SMU status relative to LRPs for all estimation methods considered for Interior Fraser Coho. In addition to the form of the stock-recruitment model, CU-statuses and hence SMU-level LRPs and statuses can be sensitive to the metric used to for CU assessments (e.g., spawner abundances relative to a lower benchmark vs. the distribution of spawners, as considered in the Interior Fraser River Coho case study).  
-<!--CH note for discussion at meeting?: Additional point that LRPs will vary over time with underlying stock-recruitment (or percentile benchmarks). This is mentioned with the IFR coho retrospective analysis removing years of data. LRPs were more temporally variable when based on SR benchmarks (which themselves varied over time) compared with distribution based benchmarks which were static. This is a point we make in the guidelines paper. If we can point to it in our results it would be good, even if the evidence isn't super strong.-->
-
-The decision on which structural form or type of benchmark to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. The challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and aggregate abundance-based LRPs, ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
 
 
-In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I add in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review). We recommend that  CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
+The decision on which structural form or type of benchmark to consider depends on the biological characteristics of the populations and available data, highlighting the importance of considering expert knowledge and peer-reviewed WSP assessments for determining CU status. The challenge of identifying the most appropriate model form is pervasive across fisheries stock assessments and brings risks of basing assessments on incorrect or incomplete model forms. In our case studies we identify several approaches for addressing this challenge, such as implementing sensitivity analyses to various assumptions and <!--CW remove: aggregate abundance-based LRPs,--><!--CW add: using--> ensemble modeling where outputs from various assumptions are combined in a probabilistic way.
+
+
+In addition, we found that removing component CUs from assessments impacted SMU-level status, resulting in SMU assessments that may be more pessimistic or optimistic than when all CUs are considered, depending on the level of covariation among CUs, status of other component CUs and, CU sizes. <!--CH: I add in this caveat specifying proportion-based LRPs in the next sentence. Does that make sense? It's much more convoluted for agg abund-based LRPs-->However, for proportion-based LRPs in particular, there is an asymmetry in how missing CUs may affect SMU status relative to the LRP. If the LRP of 100% of CUs above red status has been breached for an SMU, the inclusion of additional CUs may further deplete or improve status (% of CUs above red), but will not increase status to above the LRP (100%). In contrast, if the proportion-based LRP is not breached for an SMU, then the inclusion of additional CUs may deplete status to below the LRP or keep status at 100% of CUs above red zone, as seen for Inside South Coast Chum - Non Fraser. For this case study, the exclusion of CUs with incomplete time series led to overoptimistic assessments in some years compared to when those CUs were included. These results highlight the importance of including data from all component CUs when possible. Guidelines on identifying where data-rich CUs are more likely to provide status that is representative of data-deficient CUs and hence can be omitted from SMU-level LRPs and assessments is provided in Holt et al. (in review). We recommend that CU-level assessments and decisions about CU representativeness when developing SMU-level LRPs be peer-reviewed to ensure they result in robust and reliable LRPs.<!--CH: suggest we remove following sentence, as I'm not sure who would have this disincentive "The asymmetrical impact of increased monitoring of CUs on SMU status may reduce incentives to extend monitoring to data-deficient CUs"-->
 
 
 
@@ -38,7 +36,7 @@ There are several disadvantages of the logistic regression-based LRPs. First, ou
 
 Second, logistic regression-based LRPs are limited to conditions that have been historically observed. This can be a problem when there is poor contrast in historical data, as was the case for WCVI Chinook.  In this case, there were no years when all component inlets were above their lower benchmarks. However, similar challenges could occur in cases where no CUs drop below their lower benchmarks.  The dependence on historically observed conditions is a further limitation if there were changes in correlations in populations dynamics among CUs over time such that current or further correlations are not represented by historical data.
 
-Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12. Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
+Third, model diagnostics do not support logistic regressions and their associated LRPs when CU-level abundances are not correlated or only weakly correlated.  Here, we found that logistic regression-based LRPs were estimatable for interior Fraser Coho (average correlation within CUS of 0.43), but not estimable for Inside South Coast Chum - Non-Fraser (average correlation within CUs of 0.12). Also, the wide range in productivities and capacities among CUs for the Inside South Coast Chum case study contributed to the weak relationship between aggregate abundances and CU-level statuses. In general, model diagnostics as described in \@ref(MethodsChapters) can be used to support or reject logistic-regression based LRPs. We illustrate how these diagnostics are used to evaluate model fit in Sections \@ref(IFCChapter) and \@ref(ISCchumChapter).    
 
 
 Similar to proportion-based LRPs, CUs without reliable data poses a problem for the estimation of logistic regression-based LRPs. When CUs abundances covary strongly, it may be possible to use data-rich CUs as indicators for data-limited CUs. However, in our case study on Interior Fraser River Coho, we found that logistic regression-based LRPs were more uncertain when more than 1 CUs was missing. 
@@ -47,14 +45,10 @@ Similar to proportion-based LRPs, CUs without reliable data poses a problem for 
 
 ### Projection based LRPs
 
-<!--
-CW Question: Why did we not apply the projection-based LRP to the Chum study case? Was is because we had no means of estimating the SR parameters for the Chum CUs? If that is the case, would it be correct to say that the projection-based LRP is not appropriate for data poor scenarios? 
-CH: we didn't have plausible productivity & capacity values (and didn't have time to work with the un-reviewwed values provided by stock assessment staff)
--->
 
 The projection-based LRPs approach relies on closed-loop simulation models to project future CU abundances. These projections are then used to quantify the relationship between aggregate SMU abundances and the probabilities that all CUs are above their lower benchmarks, given a predefined level of exploitation. The most important requirements for this approach are CU-specific estimates of productivity and capacity, and covariance in recruitment among CUs. Parameter estimates for productivity and capacity can be based on posterior distributions from stock recruitment analyses (see Interior Fraser Coho study case, Section \@ref(IFCChapter)) or more qualitatively from expert input, life-stage models, or watershed-area model estimates (see WCVI Chinook study case, Section \@ref(WCVIchinookChapter)). 
 
-The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics and consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and  variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
+The projection-based LRP approach is flexible and allows for consideration of structural uncertainty in the SMU population dynamics and consideration of alternative future scenarios. For example, for the WCVI Chinook case study, sensitivity analyses were performed to assess the impacts of correlations in recruitment residuals and variability in exploitation among inlets. For the Interior Fraser Coho study case, sensitivity analyses were performed regarding the variability in marine survival coefficient among CUs. Future implementations of the projection-based LRPs could also take into consideration shifts in stock recruitment parameters, and future changes in fishery exploitation rates. 
 
 We also demonstrated that projection-based LRPs are sensitive to the assumed levels of exploitation in the projections. Higher exploitation rates resulted in higher required SMU aggregate abundance to ensure that all CUs remain above their lower benchmarks. The sensitivity to exploitation rate increases as variability in stock-recruitment parameters among CUs increase, and also as uncertainty in parameter estimates increase. This property of projection-based LRPs is explored in Appendix \@ref(app:ERsensitivity-appendix). Therefore projection-based LRPs developed under historical and current exploitation rates cannot necessarily be used as a basis for evaluating alternative management procedures. However demonstrating the changes in aggregate abundances required for all CUs to be above lower benchmarks (i.e. changes in projection-based LRP) under different exploitation scenarios may help analysts and managers understand the implications of changing exploitation rates on the ability to achieve WSP objectives.
 
